# new

AgrovisionAI/AgrovisionAI/: main.py  pyproject.toml
AgrovisionAI/AgrovisionAI/src/: App.jsx
AgrovisionAI/AgrovisionAI/src/components/: Dashboard.jsx  Login.jsx
AgrovisionAI/AgrovisionAI/static/: index.html  style.css
